--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "homepage": "https://github.com/mellyssy/layout-designer-project-lvl1#readme",
   "dependencies": {
     "surge": "^0.21.3"
+  },
+  "devDependencies": {
+    "htmlhint": "^0.13.0",
+    "stylelint": "^13.5.0",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
